k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a-service
spec:
  type: ClusterIP
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
