k8s/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: communication-policy-a-to-b
spec:
  podSelector:
    matchLabels:
      app: service-b
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: NotIn
          values:
          - service-a
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: communication-policy-b-to-a
spec:
  podSelector:
    matchLabels:
      app: service-a
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: NotIn
          values:
          - service-b
